add_library(moaicore STATIC
    MOAIDeckRemapper.h
    MOAIBox2DWeldJoint.h
    MOAIGfxDevice.cpp
    MOAIFrameBuffer.cpp
    MOAIRenderMgr.h
    MOAIFoo.cpp
    MOAIGfxQuad2D.h
    MOAIScriptDeck.cpp
    MOAIRenderMgr.cpp
    MOAILua.h
    MOAIDraw.cpp
    MOAITransform.cpp
    MOAIBox2DPrismaticJoint.cpp
    MOAIRenderable.h
    MOAIParticleDistanceEmitter.h
    MOAIKeyboardSensor.cpp
    MOAITileDeck2D.cpp
    MOAIParser.cpp
    MOAIRtti.h
    MOAIIndexBuffer.cpp
    MOAIBox2DRopeJoint.h
    MOAITextDesigner.h
    MOAISerializerBase.h
    MOAIPathTerrainDeck.h
    MOAIAnim.cpp
    MOAITransformBase.h
    MOAIGlyphCacheBase.h
    MOAIPartitionResultMgr.h
    MOAIInputDevice.h
    MOAICpDebugDraw.cpp
    MOAILuaState.cpp
    MOAIObject.h
    MOAISurfaceSampler2D.cpp
    MOAICompassSensor.h
    MOAIBox2DWeldJoint.cpp
    MOAIAnim.h
    MOAIUrlMgrNaCl.cpp
    MOAIScissorRect.h
    MOAISerializer.cpp
    MOAIHttpTaskNaCl.cpp
    MOAIWheelSensor.h
    MOAIGlyphCacheBase.cpp
    MOAIParticleCallbackPlugin.h
    MOAICpConstraint.cpp
    MOAIBox2DArbiter.h
    MOAILuaRuntime.cpp
    MOAIStaticGlyphCache.cpp
    MOAIDebugLines.cpp
    MOAIMultiTexture.h
    MOAIHttpTaskCurl.cpp
    MOAIJsonParser.h
    MOAIImage.h
    MOAILayer2D.h
    MOAICamera2D.cpp
    MOAIAnimCurve.cpp
    MOAICpSpace.cpp
    MOAIParticleState.cpp
    MOAIParticlePlugin.cpp
    MOAIParticleTimedEmitter.cpp
    MOAIBox2DRevoluteJoint.h
    MOAIParticlePexPlugin.h
    MOAIGlobals.h
    MOAITexture.h
    MOAIEnvironment.cpp
    MOAIParticleForce.cpp
    MOAIBox2DMouseJoint.cpp
    MOAILocationSensor.h
    MOAIMesh.cpp
    MOAIFreeTypeFontReader.h
    MOAIColor.h
    MOAIJoystickSensor.cpp
    MOAICameraFitter2D.h
    MOAIParticleCallbackPlugin.cpp
    MOAIBoundsDeck.h
    MOAIFileSystem.cpp
    MOAIDeck.h
    MOAISim.cpp
    MOAIGlyphCachePage.cpp
    MOAIShader.h
    MOAILuaStateHandle.cpp
    MOAIBox2DDistanceJoint.h
    MOAIGlyphSet.h
    MOAIBox2DGearJoint.cpp
    MOAIBox2DDebugDraw.cpp
    MOAIGfxQuadListDeck2D.h
    MOAIScriptNode.h
    MOAIScriptNode.cpp
    MOAIImageTexture.cpp
    MOAIGfxQuadDeck2D.h
    MOAITimer.h
    MOAIParticleSystem.cpp
    MOAIRenderable.cpp
    MOAIUrlMgrCurl.h
    MOAISurfaceSampler2D.h
    MOAIBlocker.cpp
    MOAIParticleState.h
    MOAIPartitionLevel.cpp
    MOAIHttpTaskNaCl.h
    MOAITileFlags.h
    MOAICoroutine.cpp
    MOAIQuadBrush.cpp
    MOAIPathGraph.h
    MOAIGlyphCache.h
    MOAIPathTerrainDeck.cpp
    MOAIPartitionLevel.h
    MOAIGridPathGraph.h
    MOAIButtonSensor.cpp
    MOAIPartitionResultBuffer.h
    MOAIEaseDriver.h
    MOAIShaderMgr.h
    MOAIGlyphCachePage.h
    MOAIButtonSensor.h
    MOAIStretchPatch2D.cpp
    MOAIBox2DRopeJoint.cpp
    MOAILuaSharedPtr.h
    MOAIFreeTypeFontReader.cpp
    MOAIParticleSystem.h
    MOAIFontReader.h
    MOAICameraAnchor2D.cpp
    MOAIParticlePlugin.h
    MOAIProp2D.cpp
    moaicore.h
    MOAIInputDevice.cpp
    MOAIBlendMode.h
    MOAIBox2DJoint.cpp
    MOAIImageTexture.h
    MOAIVertexBuffer.cpp
    MOAILayoutFrame.h
    MOAITouchSensor.cpp
    MOAITileDeck2D.h
    pch.h
    MOAIDraw.h
    MOAIPathFinder.h
    MOAIProp.h
    MOAIBox2DBody.h
    MOAIUrlMgrCurl.cpp
    MOAILayer2D.cpp
    MOAICanary.h
    MOAILogMgr.cpp
    MOAIEventSource.h
    MOAIJoystickSensor.h
    MOAIGfxQuadDeck2D.cpp
    MOAIViewport.h
    MOAIGfxResource.h
    MOAIEventSource.cpp
    MOAIBoundsDeck.cpp
    MOAIColor.cpp
    MOAICpSpace.h
    MOAIGfxResource.cpp
    MOAICameraFitter2D.cpp
    MOAISurfaceDeck2D.h
    MOAIBlocker.h
    MOAICpShape.cpp
    MOAICamera2D.h
    MOAIStretchPatch2D.h
    MOAIFont.h
    MOAIGfxQuad2D.cpp
    MOAISpanList.h
    MOAIBox2DRevoluteJoint.cpp
    MOAIShaderMgr.cpp
    MOAIShader.cpp
    MOAILayer.cpp
    MOAICpBody.h
    MOAIFooMgr.h
    MOAIEaseType.h
    MOAISharedPtr.h
    MOAIParticleEmitter.cpp
    MOAIImage-jpg.cpp
    MOAICpConstraint.h
    MOAIGrid.cpp
    MOAILogMessages.h
    MOAILuaState.h
    MOAIBox2DMouseJoint.h
    MOAIBox2DFrictionJoint.cpp
    MOAIPartition.cpp
    MOAINode.cpp
    MOAIProp2D.h
    MOAIGfxQuadListDeck2D.cpp
    MOAITransform.h
    MOAIPointerSensor.h
    MOAIBlendMode.cpp
    MOAIFooMgr.cpp
    MOAIHttpTaskBase.h
    MOAIGlyph.cpp
    MOAILogMessages.cpp
    MOAIIndexBuffer.h
    MOAIParticleForce.h
    MOAIParticleScript.cpp
    MOAIActionMgr.h
    MOAIBox2DGearJoint.h
    MOAIGlobals.cpp
    MOAICpShape.h
    MOAIBox2DWheelJoint.h
    MOAIParticleScript.h
    MOAIParticleTimedEmitter.h
    MOAICollisionShape.cpp
    MOAIDataIOAction.h
    MOAIGlyph.h
    MOAIInputMgr.cpp
    MOAIPartitionResultBuffer.cpp
    MOAIBox2DWheelJoint.cpp
    MOAILogMgr.h
    MOAIFont.cpp
    MOAIBox2DPulleyJoint.cpp
    MOAIDebugLines.h
    MOAIParticleEmitter.h
    MOAIBox2DWorld.cpp
    MOAILuaStateHandle.h
    MOAIFileSystem.h
    MOAILuaObject.h
    MOAIPathGraph.cpp
    MOAITimer.cpp
    MOAIParticleDistanceEmitter.cpp
    MOAISerializer.h
    MOAICamera.h
    MOAISerializerBase.cpp
    MOAIVertexBuffer.h
    MOAIBox2DArbiter.cpp
    MOAITextureBase.cpp
    MOAISensor.h
    MOAIViewport.cpp
    MOAITransformBase.cpp
    MOAIImage.cpp
    MOAIVertexFormat.cpp
    MOAILuaRuntime.h
    MOAIEaseType.cpp
    MOAIHttpTaskCurl.h
    MOAIGridSpace.cpp
    MOAIInputMgr.h
    MOAIParticle.h
    MOAIGlyphSet.cpp
    MOAIStaticGlyphCache.h
    MOAIWheelSensor.cpp
    MOAIBox2DBody.cpp
    MOAIPartition.h
    MOAICamera.cpp
    MOAIBitmapFontReader.cpp
    MOAIPvrHeader.h
    MOAICpDebugDraw.h
    CMakeLists.txt
    MOAIVertexFormatMgr.cpp
    MOAIAttrOp.h
    MOAITextStyle.cpp
    MOAIFoo.h
    MOAIWeakPtr.h
    MOAIDeserializer.cpp
    MOAIBitmapFontReader.h
    MOAIJsonParser.cpp
    MOAISim.h
    MOAICp.h
    MOAINodeMgr.h
    MOAILayer.h
    MOAIFontReader.cpp
    MOAINodeMgr.cpp
    MOAITouchSensor.h
    MOAIPathFinder.cpp
    moaicore.cpp
    MOAIBox2DWorld.h
    MOAILuaObject-impl.h
    MOAIGlyphCache.cpp
    MOAIFrameBuffer.h
    MOAITextBundle.h
    MOAIMotionSensor.cpp
    MOAIBox2DPrismaticJoint.h
    MOAIMesh.h
    MOAIDataBuffer.cpp
    MOAIHttpTaskBase.cpp
    MOAIObject.cpp
    MOAITransform2D.h
    MOAILuaRef.cpp
    MOAIProp.cpp
    MOAICpArbiter.cpp
    MOAIMultiTexture.cpp
    MOAILocationSensor.cpp
    MOAIParticlePexPlugin.cpp
    MOAICameraAnchor2D.h
    MOAIMotionSensor.h
    MOAIGfxDevice.h
    MOAILuaState-impl.h
    MOAIDeckRemapper.cpp
    MOAIDataBuffer.h
    MOAIBox2DJoint.h
    MOAICpBody.cpp
    MOAIDataIOAction.cpp
    MOAITextStyler.cpp
    MOAITexture.cpp
    MOAIEnvironment.h
    MOAIGridPathGraph.cpp
    MOAIGridSpace.h
    MOAIGrid.h
    MOAIBox2DDebugDraw.h
    MOAIQuadBrush.h
    MOAIPartitionCell.cpp
    MOAICoroutine.h
    MOAIXmlParser.h
    MOAIPointerSensor.cpp
    MOAIBox2DPulleyJoint.h
    shaders
    shaders/MOAIDeck2DShader-vsh.h
    shaders/MOAIDeck2DTexOnlyShader-vsh.h
    shaders/MOAIFontShader-vsh.h
    shaders/MOAIDeck2DShader-fsh.h
    shaders/MOAILineShader-fsh.h
    shaders/MOAIMeshShader-fsh.h
    shaders/MOAIDeck2DTexOnlyShader-fsh.h
    shaders/MOAIMeshShader-vsh.h
    shaders/MOAIFontShader-fsh.h
    shaders/MOAILineShader-vsh.h
    MOAIScriptDeck.h
    MOAIParser.h
    MOAIDeck.cpp
    MOAIKeyboardSensor.h
    MOAIPartitionCell.h
    MOAIEaseDriver.cpp
    MOAIAnimCurve.h
    MOAICanary.cpp
    MOAITextDesigner.cpp
    MOAICpArbiter.h
    MOAICompassSensor.cpp
    MOAICollisionShape.h
    MOAIBox2DFrictionJoint.h
    MOAIActionMgr.cpp
    MOAITextBox.cpp
    MOAICp.cpp
    MOAINode.h
    MOAITextBox.h
    MOAITextStyle.h
    MOAIXmlParser.cpp
    MOAISurfaceDeck2D.cpp
    MOAITileFlags.cpp
    MOAILuaRef.h
    MOAIDeserializer.h
    MOAIAction.h
    MOAIVertexFormatMgr.h
    MOAIAction.cpp
    moaicore-pch.cpp
    MOAISensor.cpp
    MOAIBox2DDistanceJoint.cpp
    MOAITextStyler.h
    MOAIBox2DFixture.h
    MOAITransform2D.cpp
    MOAIUrlMgrNaCl.h
    MOAIRtti.cpp
    MOAITextureBase.h
    MOAILuaObject.cpp
    MOAIScissorRect.cpp
    MOAIPartitionResultMgr.cpp
    MOAIImage-png.cpp
    MOAIFont_bmfont.cpp
    MOAITextBundle.cpp
    MOAILayerBridge.cpp
    MOAILayerBridge.h
    MOAILayoutFrame.cpp
    MOAIBox2DFixture.cpp
    MOAIVertexFormat.h
)

target_link_libraries(moaicore
    Box2D
    chipmunk
    tinyxml
    jpeg
    png
    ${CURL_LIBRARIES}
    ${FREETYPE_LIBRARIES}
)
