add_library(uslscore STATIC
    USTask.cpp
    USSyntaxScanner.h
    USDeviceTime_apple.cpp
    USAffine2D.h
    USBinarySearch.h
    USFileStream.cpp
    USTask.h
    USRadixSort16.h
    USPolar.cpp
    USDirectoryItr.cpp
    USLeanList.h
    USList.h
    USVec4D.h
    USAdapterInfo.h
    USMutex_posix.h
    STLIteration.h
    USInterpolate.h
    USQuadCoord.cpp
    USDeviceTime_nacl.cpp
    USSyntaxNode.h
    USMatrix3x3.h
    uslscore-pch.cpp
    USDistance.cpp
    USFileStream.h
    USSurface2D.cpp
    USDeviceTime.h
    USZipFile.cpp
    USFloat.h
    USCgt.h
    USUnique_win32.cpp
    USFactory.h
    USTrig.cpp
    USByteStream.cpp
    USPolar.h
    USThread_win32.h
    USTrig.h
    USLeanStack.h
    USPolyScanner.h
    USPlane.h
    USVec2D.h
    USDataIOTask.cpp
    USHexDump.cpp
    USSyntaxScanner.cpp
    USThread.cpp
    USStream.cpp
    USFrustum.cpp
    USXmlReader.cpp
    USIntersect.h
    pch.h
    STLSet.h
    USDistance.h
    USMutex_win32.cpp
    USMathConsts.h
    USPrism.cpp
    USMutex.cpp
    USUnique_linux.cpp
    STLString.h
    USThread_win32.cpp
    USColor.h
    USFileSys.cpp
    USTypeID.h
    STLList.h
    USMutex_posix.cpp
    USHexDump.h
    USThread_posix.cpp
    USRadixSort32.h
    USZip.h
    USTaskThread.cpp
    USSyntaxNode.cpp
    STLArray.h
    USQuad.h
    USMemStream.cpp
    USParser.h
    USFileSys.h
    USLog.cpp
    USRhombus.h
    USMatrix4x4.h
    USThread.h
    USTaskThread.h
    USData.cpp
    USBox.cpp
    USDataIOTask.h
    USDeviceTime_win32.cpp
    STLString.cpp
    USDirectoryItr.h
    USLexStream.h
    USTypedPtr.h
    USZipFile.h
    STLMap.h
    USIntersect.cpp
    USMercator.h
    USPolygon2D.h
    USFrustum.h
    USUnion.h
    CMakeLists.txt
    USThread_posix.h
    USMatrix.h
    USLeanPool.h
    USColor.cpp
    uslscore.h
    USDelegate.h
    USPrism.h
    USCurve.cpp
    USBox.h
    USQuadCoord.h
    USMutex.h
    USTypedPtr.cpp
    USInterpolate.cpp
    USSurface2D.h
    USDeviceTime_posix.cpp
    USStream.h
    USAccessors.h
    USParser.cpp
    USMutex_win32.h
    USMemStream.h
    USQuad.cpp
    USVec3D.h
    USRhombus.cpp
    USLog.h
    USRect.h
    USPlane.cpp
    USMercator.cpp
    USCurve.h
    USLeanArray.h
    USCgt.cpp
    USByteStream.h
    USZip.cpp
    USLexStream.cpp
    USAdapterInfo_posix.cpp
    USUnique.h
    USData.h
    USAffine3D.h
    USAdapterInfo_win32.cpp
    USXmlReader.h
    USBase64Encoder.cpp
    USBase64Encoder.h
    USBase64Reader.cpp
    USBase64Reader.h
    USBase64Writer.cpp
    USBase64Writer.h
    USDeflateReader.cpp
    USDeflateReader.h
    USDeflateWriter.cpp
    USDeflateWriter.h
    USQuaternion.cpp
    USQuaternion.h
    USStreamReader.cpp
    USStreamReader.h
    USStreamWriter.cpp
    USStreamWriter.h
)

target_link_libraries(uslscore
    ${LUA_LIBRARIES}
    ${ZLIB_LIBRARIES}
)
