moai_set_local_source_dir()

add_library(uslscore STATIC
    "${local_source_dir}/USTask.cpp"
    "${local_source_dir}/USSyntaxScanner.h"
    "${local_source_dir}/USDeviceTime_apple.cpp"
    "${local_source_dir}/USAffine2D.h"
    "${local_source_dir}/USBinarySearch.h"
    "${local_source_dir}/USFileStream.cpp"
    "${local_source_dir}/USTask.h"
    "${local_source_dir}/USRadixSort16.h"
    "${local_source_dir}/USPolar.cpp"
    "${local_source_dir}/USDirectoryItr.cpp"
    "${local_source_dir}/USLeanList.h"
    "${local_source_dir}/USList.h"
    "${local_source_dir}/USVec4D.h"
    "${local_source_dir}/USAdapterInfo.h"
    "${local_source_dir}/USMutex_posix.h"
    "${local_source_dir}/STLIteration.h"
    "${local_source_dir}/USInterpolate.h"
    "${local_source_dir}/USQuadCoord.cpp"
    "${local_source_dir}/USDeviceTime_nacl.cpp"
    "${local_source_dir}/USSyntaxNode.h"
    "${local_source_dir}/USMatrix3x3.h"
    "${local_source_dir}/uslscore-pch.cpp"
    "${local_source_dir}/USDistance.cpp"
    "${local_source_dir}/USFileStream.h"
    "${local_source_dir}/USSurface2D.cpp"
    "${local_source_dir}/USDeviceTime.h"
    "${local_source_dir}/USZipFile.cpp"
    "${local_source_dir}/USFloat.h"
    "${local_source_dir}/USCgt.h"
    "${local_source_dir}/USUnique_win32.cpp"
    "${local_source_dir}/USFactory.h"
    "${local_source_dir}/USTrig.cpp"
    "${local_source_dir}/USByteStream.cpp"
    "${local_source_dir}/USPolar.h"
    "${local_source_dir}/USThread_win32.h"
    "${local_source_dir}/USTrig.h"
    "${local_source_dir}/USLeanStack.h"
    "${local_source_dir}/USPolyScanner.h"
    "${local_source_dir}/USPlane.h"
    "${local_source_dir}/USVec2D.h"
    "${local_source_dir}/USDataIOTask.cpp"
    "${local_source_dir}/USHexDump.cpp"
    "${local_source_dir}/USSyntaxScanner.cpp"
    "${local_source_dir}/USThread.cpp"
    "${local_source_dir}/USStream.cpp"
    "${local_source_dir}/USFrustum.cpp"
    "${local_source_dir}/USXmlReader.cpp"
    "${local_source_dir}/USIntersect.h"
    "${local_source_dir}/pch.h"
    "${local_source_dir}/STLSet.h"
    "${local_source_dir}/USDistance.h"
    "${local_source_dir}/USMutex_win32.cpp"
    "${local_source_dir}/USMathConsts.h"
    "${local_source_dir}/USPrism.cpp"
    "${local_source_dir}/USMutex.cpp"
    "${local_source_dir}/USUnique_linux.cpp"
    "${local_source_dir}/STLString.h"
    "${local_source_dir}/USThread_win32.cpp"
    "${local_source_dir}/USColor.h"
    "${local_source_dir}/USFileSys.cpp"
    "${local_source_dir}/USTypeID.h"
    "${local_source_dir}/STLList.h"
    "${local_source_dir}/USMutex_posix.cpp"
    "${local_source_dir}/USHexDump.h"
    "${local_source_dir}/USThread_posix.cpp"
    "${local_source_dir}/USRadixSort32.h"
    "${local_source_dir}/USZip.h"
    "${local_source_dir}/USTaskThread.cpp"
    "${local_source_dir}/USSyntaxNode.cpp"
    "${local_source_dir}/STLArray.h"
    "${local_source_dir}/USQuad.h"
    "${local_source_dir}/USMemStream.cpp"
    "${local_source_dir}/USParser.h"
    "${local_source_dir}/USFileSys.h"
    "${local_source_dir}/USLog.cpp"
    "${local_source_dir}/USRhombus.h"
    "${local_source_dir}/USMatrix4x4.h"
    "${local_source_dir}/USThread.h"
    "${local_source_dir}/USTaskThread.h"
    "${local_source_dir}/USData.cpp"
    "${local_source_dir}/USBox.cpp"
    "${local_source_dir}/USDataIOTask.h"
    "${local_source_dir}/USDeviceTime_win32.cpp"
    "${local_source_dir}/STLString.cpp"
    "${local_source_dir}/USDirectoryItr.h"
    "${local_source_dir}/USLexStream.h"
    "${local_source_dir}/USTypedPtr.h"
    "${local_source_dir}/USZipFile.h"
    "${local_source_dir}/STLMap.h"
    "${local_source_dir}/USIntersect.cpp"
    "${local_source_dir}/USMercator.h"
    "${local_source_dir}/USPolygon2D.h"
    "${local_source_dir}/USFrustum.h"
    "${local_source_dir}/USUnion.h"
    "${local_source_dir}/USThread_posix.h"
    "${local_source_dir}/USMatrix.h"
    "${local_source_dir}/USLeanPool.h"
    "${local_source_dir}/USColor.cpp"
    "${local_source_dir}/uslscore.h"
    "${local_source_dir}/USDelegate.h"
    "${local_source_dir}/USPrism.h"
    "${local_source_dir}/USCurve.cpp"
    "${local_source_dir}/USBox.h"
    "${local_source_dir}/USQuadCoord.h"
    "${local_source_dir}/USMutex.h"
    "${local_source_dir}/USTypedPtr.cpp"
    "${local_source_dir}/USInterpolate.cpp"
    "${local_source_dir}/USSurface2D.h"
    "${local_source_dir}/USDeviceTime_posix.cpp"
    "${local_source_dir}/USStream.h"
    "${local_source_dir}/USAccessors.h"
    "${local_source_dir}/USParser.cpp"
    "${local_source_dir}/USMutex_win32.h"
    "${local_source_dir}/USMemStream.h"
    "${local_source_dir}/USQuad.cpp"
    "${local_source_dir}/USVec3D.h"
    "${local_source_dir}/USRhombus.cpp"
    "${local_source_dir}/USLog.h"
    "${local_source_dir}/USRect.h"
    "${local_source_dir}/USPlane.cpp"
    "${local_source_dir}/USMercator.cpp"
    "${local_source_dir}/USCurve.h"
    "${local_source_dir}/USLeanArray.h"
    "${local_source_dir}/USCgt.cpp"
    "${local_source_dir}/USByteStream.h"
    "${local_source_dir}/USZip.cpp"
    "${local_source_dir}/USLexStream.cpp"
    "${local_source_dir}/USAdapterInfo_posix.cpp"
    "${local_source_dir}/USUnique.h"
    "${local_source_dir}/USData.h"
    "${local_source_dir}/USAffine3D.h"
    "${local_source_dir}/USAdapterInfo_win32.cpp"
    "${local_source_dir}/USXmlReader.h"
    "${local_source_dir}/USBase64Encoder.cpp"
    "${local_source_dir}/USBase64Encoder.h"
    "${local_source_dir}/USBase64Reader.cpp"
    "${local_source_dir}/USBase64Reader.h"
    "${local_source_dir}/USBase64Writer.cpp"
    "${local_source_dir}/USBase64Writer.h"
    "${local_source_dir}/USDeflateReader.cpp"
    "${local_source_dir}/USDeflateReader.h"
    "${local_source_dir}/USDeflateWriter.cpp"
    "${local_source_dir}/USDeflateWriter.h"
    "${local_source_dir}/USQuaternion.cpp"
    "${local_source_dir}/USQuaternion.h"
    "${local_source_dir}/USStreamReader.cpp"
    "${local_source_dir}/USStreamReader.h"
    "${local_source_dir}/USStreamWriter.cpp"
    "${local_source_dir}/USStreamWriter.h"
)

target_link_libraries(uslscore
    ${LUA_LIBRARIES}
    ${ZLIB_LIBRARIES}
)
